--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch":  "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "6.9.1"
-  },
+  }, 
   "author": "",
   "license": "ISC",
   "dependencies": {
