--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":  "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "6.9.1"
-  }, 
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.21",
     "mongoose": "^4.7.7"
   },
